Cleaner method to get the full qualified classname in utils-class